--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16.0", features = ["dynamic_linking"] }
+bimap = { version = "0.6.3", features = ["serde"] }
+bitvec = "1.0.1"
+rand = "0.9.1"
+serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
+thiserror = "2.0.12"
 
 
 
