--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arc-swap = "1.7.1"
 bevy = { version = "0.16.0", features = ["dynamic_linking"] }
 bimap = { version = "0.6.3", features = ["serde"] }
 bitvec = "1.0.1"
