--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 arc-swap = "1.7.1"
-bevy = { version = "0.16.0", features = ["dynamic_linking", "trace_tracy"] }
+bevy = { version = "0.16.0"}
+bevy_polyline = "0.12.0"
 bimap = { version = "0.6.3", features = ["serde"] }
 bitvec = "1.0.1"
 rand = "0.9.1"
